--- a/package.json
+++ b/package.json
@@ -16,14 +16,15 @@
   "dependencies": {
     "@astrojs/react": "^3.2.2",
     "@astrojs/tailwind": "^5.1.0",
+    "@radix-ui/react-slot": "^1.0.2",
     "astro": "^4.5.9",
     "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "lucide-react": "^0.344.0",
+    "mermaid": "^11.12.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwind-merge": "^2.2.1",
-    "clsx": "^2.1.0",
-    "@radix-ui/react-slot": "^1.0.2"
+    "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.47",
