--- a/package.json
+++ b/package.json
@@ -20,10 +20,15 @@
     "astro": "^4.5.9",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "katex": "^0.16.27",
     "lucide-react": "^0.344.0",
     "mermaid": "^11.12.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^10.1.0",
+    "rehype-katex": "^7.0.1",
+    "remark-gfm": "^4.0.1",
+    "remark-math": "^6.0.0",
     "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
